--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "express": "^4.17.3",
         "http": "0.0.1-security",
         "prisma": "^4.6.1",
-        "tsc": "^2.0.4"
+        "tsc": "^2.0.4",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^18.8.1",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.43.0",
         "eslint": "^8.0.1",
