--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
         "canonicalize": "^1.0.8",
         "dotenv": "^16.0.3",
         "express": "^4.17.3",
+        "helmet": "^6.0.0",
+        "hpp": "^0.2.3",
         "http": "0.0.1-security",
         "prisma": "^4.6.1",
         "tsc": "^2.0.4",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "winston": "^3.8.2"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
+        "@types/hpp": "^0.2.2",
         "@types/node": "^18.8.1",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
