--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "helmet": "^6.0.0",
         "hpp": "^0.2.3",
         "http": "0.0.1-security",
+        "joi": "^17.7.0",
         "prisma": "^4.6.1",
         "tsc": "^2.0.4",
         "uuid": "^9.0.0",
