--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,4 +8,15 @@ services:
             POSTGRES_PASSWORD: password
             POSTGRES_DB: db
         ports:
-            - 5432:5432           
+            - 5432:5432
+    s3:
+        image: localstack/localstack:latest
+        container_name: s3
+        environment: 
+            - AWS_DEFAULT_REGION=eu-west-1
+            - EDGE_PORT=4566
+            - SERVICES=s3
+        ports: 
+            - '4566-4583:4566-4583'
+        volumes: 
+            - .localstack:/tmp/localstack
