--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "nodemon --config ./nodemon.json src/index.ts"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.213.0",
         "@prisma/client": "^4.6.1",
         "canonicalize": "^1.0.8",
         "dotenv": "^16.0.3",
@@ -17,6 +18,7 @@
         "http": "0.0.1-security",
         "prisma": "^4.6.1",
         "tsc": "^2.0.4",
+        "typescript": "^4.9.3",
         "uuid": "^9.0.0",
         "winston": "^3.8.2"
     },
@@ -30,7 +32,6 @@
         "eslint": "^8.0.1",
         "eslint-config-google": "^0.14.0",
         "nodemon": "^2.0.13",
-        "ts-node": "^10.3.0",
-        "typescript": "^4.8.4"
+        "ts-node": "^10.3.0"
     }
 }
