--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "license": "AGPL-3.0",
     "scripts": {
-        "start": "nodemon --config ./nodemon.json src/index.ts"
+        "start": "nodemon --config ./nodemon.json src/index.ts",
+        "generate": "npx prisma generate --schema ./src/prisma/schema.prisma"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.213.0",
@@ -26,6 +27,7 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/hpp": "^0.2.2",
+        "@types/joi": "^17.2.3",
         "@types/node": "^18.8.1",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
