--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "hpp": "^0.2.3",
         "http": "0.0.1-security",
         "joi": "^17.7.0",
+        "node-schedule": "^2.1.0",
         "prisma": "^4.6.1",
         "tsc": "^2.0.4",
         "typescript": "^4.9.3",
@@ -29,6 +30,7 @@
         "@types/hpp": "^0.2.2",
         "@types/joi": "^17.2.3",
         "@types/node": "^18.8.1",
+        "@types/node-schedule": "^2.1.0",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.43.0",
