--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.213.0",
         "@prisma/client": "^4.6.1",
+        "axios": "^1.2.0",
         "canonicalize": "^1.0.8",
         "dayjs": "^1.11.6",
         "dotenv": "^16.0.3",
@@ -20,6 +21,7 @@
         "hpp": "^0.2.3",
         "http": "0.0.1-security",
         "joi": "^17.7.0",
+        "node-forge": "^1.3.1",
         "node-schedule": "^2.1.0",
         "prisma": "^4.6.1",
         "tsc": "^2.0.4",
@@ -32,6 +34,7 @@
         "@types/jest": "^29.2.3",
         "@types/joi": "^17.2.3",
         "@types/node": "^18.8.1",
+        "@types/node-forge": "^1.3.1",
         "@types/node-schedule": "^2.1.0",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
