--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.213.0",
         "@prisma/client": "^4.6.1",
+        "archiver": "^5.3.1",
         "axios": "^1.2.0",
         "canonicalize": "^1.0.8",
         "dayjs": "^1.11.6",
@@ -29,6 +30,7 @@
         "winston": "^3.8.2"
     },
     "devDependencies": {
+        "@types/archiver": "^5.3.1",
         "@types/express": "^4.17.13",
         "@types/hpp": "^0.2.2",
         "@types/jest": "^29.2.3",
