--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "node-forge": "^1.3.1",
         "node-schedule": "^2.1.0",
         "prisma": "^4.6.1",
+        "random-word-slugs": "^0.1.6",
         "tsc": "^2.0.4",
         "uuid": "^9.0.0",
         "winston": "^3.8.2"
@@ -49,6 +50,7 @@
         "nodemon": "^2.0.13",
         "ts-jest": "^29.0.3",
         "ts-node": "^10.3.0",
+        "tsconfig-paths": "^4.1.0",
         "typescript": "^4.9.3"
     }
 }
