--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,18 @@ services:
         container_name: server
         ports:
             - 8001:8001
+    gateway:
+        image: nginx:alpine
+        container_name: gateway
+        restart: unless-stopped
+        volumes:
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+            - .blobs/gateway/gateway-cert:/etc/ssl/gateway-cert.pem
+            - .blobs/root-ca/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
+            - .keys/gateway-private.pem:/etc/ssl/gateway-private.pem
+        ports:
+            - 8000:80
+            - 8002:443
     postgres:
         image: postgres
         container_name: postgres
