fixing merge conflicts

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,14 @@
+# map $http_user_agent $mobile {
+#     default       0;
+#     "~Opera Mini" 1;
+# }
+
+# Extract the common name from the client cert
+map $ssl_client_s_dn  $ssl_client_cn {
+  default "ape";
+  ~,CN=(?<CN>[^,]+) $CN;
+}
+
 server {
     listen                  80;
     server_name             airbotics-gateway;
@@ -14,25 +25,27 @@ server {
 
 }
 
+
 server {
     listen                  443 ssl;
     server_name             airbotics-gateway-mutual;
-    ssl_certificate         /etc/ssl/gateway-cert.pem;
-    ssl_certificate_key     /etc/ssl/gateway-private.pem;
+    ssl_certificate         /etc/ssl/airbotics-gateway-cert.pem;
+    ssl_certificate_key     /etc/ssl/airbotics-gateway-key.pem;
     ssl_protocols           TLSv1.2 TLSv1.3;
     ssl_ciphers             HIGH:!aNULL:!MD5;
 
     ssl_client_certificate  /etc/ssl/airbotics-root-ca-cert.pem;
     ssl_verify_client       on;
 
-    access_log          /var/log/nginx/air-mutual.access.log;
-    error_log           /var/log/nginx/air-mutual.error.log;
+    access_log              /var/log/nginx/air-mutual.access.log;
+    error_log               /var/log/nginx/air-mutual.error.log;
 
 
     location / {
-        proxy_pass http://host.docker.internal:8001;
-    }
 
-    error_page   500 502 503 504  /50x.html;
+        add_header X-debug-message "client subject us $ssl_client_s_dn" always;
+        resolver            127.0.0.11 [::1];
+        proxy_pass          "http://host.docker.internal:8001/$ssl_client_cn";
+    }
 
 }
