--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,15 +9,15 @@ services:
     gateway:
         image: nginx:alpine
         container_name: gateway
-        restart: unless-stopped
+
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-            - .blobs/gateway/gateway-cert:/etc/ssl/gateway-cert.pem
             - .blobs/root-ca/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
-            - .keys/gateway-private.pem:/etc/ssl/gateway-private.pem
+            - .blobs/certs/gateway:/etc/ssl/airbotics-gateway-cert.pem
+            - .keys/gateway-cert-private.pem:/etc/ssl/airbotics-gateway-key.pem
         ports:
-            - 8000:80
-            - 8002:443
+            - 8002:80
+            - 8003:443
     postgres:
         image: postgres
         container_name: postgres
