--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@
 
 # Extract the common name from the client cert
 map $ssl_client_s_dn  $ssl_client_cn {
-  default "ape";
+  default "";
   ~,CN=(?<CN>[^,]+) $CN;
 }
 
@@ -43,9 +43,9 @@ server {
 
     location / {
 
-        add_header X-debug-message "client subject us $ssl_client_s_dn" always;
+        add_header X-debug-message "client subject us $ssl_client_s_dn one is $1 " always;
         resolver            127.0.0.11 [::1];
-        proxy_pass          "http://host.docker.internal:8001/$ssl_client_cn";
+        proxy_pass          "http://host.docker.internal:8001/robots/$ssl_client_cn";
     }
 
 }
