Added robot ID to header in gateway for mutual tls

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,10 +42,9 @@ server {
 
 
     location / {
-
-        add_header X-debug-message "client subject us $ssl_client_s_dn one is $1 " always;
-        resolver            127.0.0.11 [::1];
-        proxy_pass          "http://host.docker.internal:8001/robots/$ssl_client_cn";
+        add_header X-robot-id   "$ssl_client_cn" always;
+        resolver                127.0.0.11 [::1];
+        proxy_pass              http://host.docker.internal:8001;
     }
 
 }
