pulling robot id from header sent by robot gateway

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,16 @@
-# map $http_user_agent $mobile {
-#     default       0;
-#     "~Opera Mini" 1;
-# }
-
-# Extract the common name from the client cert
+# extract the common name from the client cert
 map $ssl_client_s_dn  $ssl_client_cn {
-  default "";
-  ~,CN=(?<CN>[^,]+) $CN;
+    default "";
+    ~,CN=(?<CN>[^,]+) $CN;
 }
 
+# for http
 server {
     listen                  80;
     server_name             airbotics-gateway;
 
     access_log              /var/log/nginx/air.access.log;
     error_log               /var/log/nginx/air.error.log;
-
 
     location / {
         proxy_pass          http://host.docker.internal:8001;
@@ -25,7 +20,7 @@ server {
 
 }
 
-
+# for mutual tls
 server {
     listen                  443 ssl;
     server_name             airbotics-gateway-mutual;
@@ -40,11 +35,10 @@ server {
     access_log              /var/log/nginx/air-mutual.access.log;
     error_log               /var/log/nginx/air-mutual.error.log;
 
-
     location / {
-        add_header X-robot-id   "$ssl_client_cn" always;
-        resolver                127.0.0.11 [::1];
-        proxy_pass              http://host.docker.internal:8001;
+        proxy_set_header    X-robot-id   "$ssl_client_cn";  
+        resolver            127.0.0.11 [::1];
+        proxy_pass          http://host.docker.internal:8001;
     }
 
 }
