--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,7 +36,7 @@ server {
     error_log               /var/log/nginx/air-mutual.error.log;
 
     location / {
-        proxy_set_header    X-robot-id   "$ssl_client_cn";  
+        proxy_set_header    air-client-id "$ssl_client_cn";  
         resolver            127.0.0.11 [::1];
         proxy_pass          http://host.docker.internal:8001;
     }
