--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "license": "AGPL-3.0",
     "scripts": {
         "start": "nodemon --config ./nodemon.json src/index.ts",
+        "build": "tsc",
         "generate": "npx prisma generate --schema ./src/prisma/schema.prisma",
+        "helper": "npx ts-node ./scripts/dev-helper.ts",
         "test": "jest -i"
     },
     "dependencies": {
@@ -27,6 +29,7 @@
         "node-schedule": "^2.1.0",
         "prisma": "^4.6.1",
         "random-word-slugs": "^0.1.6",
+        "readline-sync": "^1.4.10",
         "tsc": "^2.0.4",
         "uuid": "^9.0.0",
         "winston": "^3.8.2"
@@ -40,6 +43,7 @@
         "@types/node": "^18.8.1",
         "@types/node-forge": "^1.3.1",
         "@types/node-schedule": "^2.1.0",
+        "@types/readline-sync": "^1.4.4",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.43.0",
