--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,10 @@ services:
     gateway:
         image: nginx:alpine
         container_name: gateway
-
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-            - .blobs/root-ca/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
-            - .blobs/certs/gateway:/etc/ssl/airbotics-gateway-cert.pem
+            - .blobs/root/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
+            - .blobs/root/gateway:/etc/ssl/airbotics-gateway-cert.pem
             - .keys/gateway-cert-private.pem:/etc/ssl/airbotics-gateway-key.pem
         ports:
             - 8002:80
