fixing bug with gateway certs

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
             - .blobs/root/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
-            - .blobs/root/gateway:/etc/ssl/airbotics-gateway-cert.pem
-            - .keys/gateway-cert-private.pem:/etc/ssl/airbotics-gateway-key.pem
+            - .blobs/root/gateway-cert:/etc/ssl/airbotics-gateway-cert.pem
+            - .keys/gateway-private.pem:/etc/ssl/airbotics-gateway-key.pem
         ports:
             - 8002:80
             - 8003:443
