--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dayjs": "^1.11.6",
         "dotenv": "^16.0.3",
         "express": "^4.17.3",
+        "express-status-monitor": "^1.3.4",
         "helmet": "^6.0.0",
         "hpp": "^0.2.3",
         "http": "0.0.1-security",
