--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.213.0",
         "@joi/date": "^2.1.0",
+        "@ory/client": "^1.1.4",
         "@prisma/client": "^4.6.1",
         "archiver": "^5.3.1",
         "axios": "^1.2.0",
