--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "scripts": {
         "start": "nodemon --config ./nodemon.json src/index.ts",
         "lint": "eslint .",
-        "build": "tsc",
+        "build": "tsc && tsc-alias",
         "generate": "npx prisma generate --schema ./src/prisma/schema.prisma",
         "helper": "npx ts-node ./scripts/dev-helper.ts",
-        "test": "jest -i"
+        "test": "jest -i --detectOpenHandles"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.213.0",
@@ -33,6 +33,7 @@
         "prisma": "^4.6.1",
         "random-word-slugs": "^0.1.6",
         "readline-sync": "^1.4.10",
+        "shelljs": "^0.8.5",
         "tsc": "^2.0.4",
         "uuid": "^9.0.0",
         "winston": "^3.8.2"
@@ -47,6 +48,8 @@
         "@types/node-forge": "^1.3.1",
         "@types/node-schedule": "^2.1.0",
         "@types/readline-sync": "^1.4.4",
+        "@types/shelljs": "^0.8.11",
+        "@types/supertest": "^2.0.12",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.43.0",
@@ -56,8 +59,10 @@
         "jest": "^29.3.1",
         "jest-mock-extended": "^3.0.1",
         "nodemon": "^2.0.13",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.0.3",
         "ts-node": "^10.3.0",
+        "tsc-alias": "^1.8.2",
         "tsconfig-paths": "^4.1.1",
         "typescript": "^4.9.3"
     }
