--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,19 @@
 version: '3.8'
 services:
-    server:
-        image: server
+    air-server:
+        image: air-server
+        container_name: air-server
         build: .
-        container_name: server
+        environment:
+            NODE_ENV: development
+            POSTGRES_CONN_STR: postgresql://user:password@postgres:5432/db?schema=public
+            PORT: 8001
         ports:
             - 8001:8001
+        volumes: 
+            - .blobs:/app/.blobs
+            - .keys:/app/.keys
+            - .logs:/app/.logs
     gateway:
         image: nginx:alpine
         container_name: gateway
@@ -36,4 +44,6 @@ services:
         ports: 
             - '4566-4583:4566-4583'
         volumes: 
-            - .localstack:/tmp/localstack
+            - localstack:/var/lib/localstack
+volumes:
+    localstack:
