--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@ory/client": "^1.1.4",
         "@prisma/client": "^4.6.1",
         "archiver": "^5.3.1",
+        "async-shelljs": "^0.1.4",
         "axios": "^1.2.0",
         "canonicalize": "^1.0.8",
         "dayjs": "^1.11.6",
@@ -33,7 +34,6 @@
         "prisma": "^4.6.1",
         "random-word-slugs": "^0.1.6",
         "readline-sync": "^1.4.10",
-        "shelljs": "^0.8.5",
         "tsc": "^2.0.4",
         "uuid": "^9.0.0",
         "winston": "^3.8.2"
@@ -48,7 +48,6 @@
         "@types/node-forge": "^1.3.1",
         "@types/node-schedule": "^2.1.0",
         "@types/readline-sync": "^1.4.4",
-        "@types/shelljs": "^0.8.11",
         "@types/supertest": "^2.0.12",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
