--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.213.0",
+        "@aws-sdk/client-secrets-manager": "^3.250.0",
         "@joi/date": "^2.1.0",
         "@ory/client": "^1.1.4",
         "@prisma/client": "^4.6.1",
@@ -39,6 +40,7 @@
         "winston": "^3.8.2"
     },
     "devDependencies": {
+        "@aws-sdk/types": "^3.226.0",
         "@types/archiver": "^5.3.1",
         "@types/express": "^4.17.13",
         "@types/hpp": "^0.2.2",
