--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "test": "jest -i --detectOpenHandles"
     },
     "dependencies": {
+        "@aws-sdk/client-acm-pca": "^3.254.0",
         "@aws-sdk/client-s3": "^3.213.0",
         "@aws-sdk/client-secrets-manager": "^3.250.0",
         "@joi/date": "^2.1.0",
