--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,9 @@ server {
     error_log                 /var/log/nginx/air.error.log;
 
     location / {
-        proxy_pass          http://host.docker.internal:8001;
+        # proxy_pass          http://host.docker.internal:8001;     #macos
+        proxy_pass            http://172.17.0.1:8001;                      #linux
+
     }
 
     error_page              500 502 503 504  /50x.html;
@@ -44,7 +46,8 @@ server {
     location / {
         proxy_set_header    air-client-id "$ssl_client_cn";  
         resolver            127.0.0.11 [::1];
-        proxy_pass          http://host.docker.internal:8001;
+        #proxy_pass          http://host.docker.internal:8001;     #macos  
+        proxy_pass          http://172.17.0.1:8001;               #linux
     }
 
 }
