--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,9 @@ services:
         container_name: gateway
         volumes:
             - ./res/nginx.conf:/etc/nginx/conf.d/default.conf
-            - .blobs/root/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
-            - .blobs/root/gateway-cert:/etc/ssl/airbotics-gateway-cert.pem
-            - .keys/gateway-private.pem:/etc/ssl/airbotics-gateway-key.pem
+            - .blobs/certs/root-ca-cert:/etc/ssl/airbotics-root-ca-cert.pem
+            - .blobs/certs/gateway-cert:/etc/ssl/airbotics-gateway-cert.pem
+            - .keys/gateway-key-private.pem:/etc/ssl/airbotics-gateway-key.pem
         ports:
             - 8002:80
             - 8003:443
