--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "include": [
         "./src/",
         "./scripts/",
-        "./tests/"
+        "./tests/",
+        "./.scratch/"
     ],
     "ts-node": {
         "require": ["tsconfig-paths/register"]
