--- a/res/nginx.conf
+++ b/res/nginx.conf
@@ -16,8 +16,8 @@ server {
     error_log                 /var/log/nginx/air.error.log;
 
     location / {
-        # proxy_pass          http://host.docker.internal:8001;     #macos
-        proxy_pass            http://172.17.0.1:8001;               #linux
+        proxy_pass          http://host.docker.internal:8001;     #macos
+        # proxy_pass            http://172.17.0.1:8001;               #linux
 
     }
 
@@ -45,8 +45,8 @@ server {
     location / {
         proxy_set_header    air-client-id "$ssl_client_cn";  
         resolver            127.0.0.11 [::1];
-        # proxy_pass         http://host.docker.internal:8001;     #macos  
-        proxy_pass          http://172.17.0.1:8001;                 #linux
+        proxy_pass         http://host.docker.internal:8001;     #macos  
+        # proxy_pass          http://172.17.0.1:8001;                 #linux
     }
 
 }
