fix for treehub encoding bin string as utf-8

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
             "@airbotics-middlewares": ["src/middlewares/"],
             "@airbotics-modules/*": ["src/modules/*"],
             "@airbotics-types": ["src/types/"],
+            "@airbotics-reponse-types": ["src/types/responses.ts"],
             "@airbotics-config": ["src/config/"]
         },
         "typeRoots": [
